# -galgame-

./: .gitignore  CMakeLists.txt  README.md  galgame.md  index.html
qml/: Main.qml
src/: databasemanager.cpp  databasemanager.h  gamelistmodel.cpp  gamelistmodel.h  main.cpp  roundedimageprovider.h
